--- a/Szakdolgozat/nbproject/project.properties
+++ b/Szakdolgozat/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/Szakdolgozat.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\Hars\u00e1nyi L\u00e1szl\u00f3\\Desktop\\jcalendar\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.27.jar-1=..\\Java extra\\mysql-connector-java-8.0.27.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.27.jar-1}
+    ${file.reference.mysql-connector-java-8.0.27.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
