--- a/Szakdolgozat/nbproject/project.properties
+++ b/Szakdolgozat/nbproject/project.properties
@@ -35,7 +35,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.27.jar-1}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
