--- a/Szakdolgozat/nbproject/project.properties
+++ b/Szakdolgozat/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Szakdolgozat
+application.vendor=Hars\u00e1nyi L\u00e1szl\u00f3
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Szakdolgozat.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Hars\u00e1nyi L\u00e1szl\u00f3\\Desktop\\jcalendar\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\hlaci\\OneDrive\\Asztali g\u00e9p\\Jcalendar\\lib\\jcalendar-1.4.jar
