--- a/Szakdolgozat/nbproject/project.properties
+++ b/Szakdolgozat/nbproject/project.properties
@@ -29,16 +29,14 @@ dist.jar=${dist.dir}/Szakdolgozat.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar=C:\\Users\\Hars\u00e1nyi L\u00e1szl\u00f3\\Desktop\\jcalendar\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\hlaci\\OneDrive\\Asztali g\u00e9p\\Jcalendar\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=..\\Java extra\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.27.jar-1=..\\Java extra\\mysql-connector-java-8.0.27.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.27.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
